<!--
  ~ Copyright 2022 VastGui
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">GStyleButtonSampleDemo</string>
    <string name="solid_oval_button">实心圆形按钮</string>
    <string name="hollow_oval_button">空心圆形按钮</string>
    <string name="linear_gradient_oval_button">linear线性渐变</string>
    <string name="sweep_oval_button">sweep线性渐变圆形按钮</string>
    <string name="stroke_oval_button">带边框圆形按钮</string>
    <string name="solid_corner_rect_shape_button">实心圆角按钮</string>
    <string name="linear_gradient_corner_rect_shape_button">实心渐变圆角按钮</string>
    <string name="stroke_rect_shape_button">带边框矩形按钮</string>
    <string name="linear_gradient_stroke_corner_rect_shape_button">实心渐变带边框圆角按钮</string>
    <string name="stroke_any_corner_rect_shape_button">带边框任意圆角矩形按钮</string>
</resources>